--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,6 +17,9 @@
 
     {{ hugo.Generator }}
 
+    <!--  Netlify  -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
     <!-- Font -->
     <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet'
         type='text/css'>
